# SparkVoice

./: .gitignore  LICENSE  README.md  build_log.txt  download_model.py  index.html  mindmap.html  package-lock.json  package.json  pill.html  vite.config.ts
src/: main.ts  mindmap.ts  pill-fonts.css  pill.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  build_log_devices.txt  check.txt  full_build_log.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_check.rs  commands.rs  db.rs  errors.rs  lib.rs  llm.rs  main.rs  migration.rs  models.rs  network_trigger.rs  settings.rs  stats.rs  whisper.rs
