[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = { version = "0.13", features = ["cuda"] }
cpal = "0.15"
enigo = "0.2"
tokio = { version = "1", features = ["full"] }
hound = "3.5"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["blocking"] }

[features]
default = []
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]

