[package]
name = "sparkvoice"
version = "0.1.4"
description = "Voice to text application. Enhances productivity with AI agents and assistance. Runs local for total privacy."
authors = ["Adrian Spark"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sparkvoice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = { version = "0.13" }
cpal = "0.15"
enigo = "0.2"
anyhow = "1.0"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
sha2 = "0.10"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-log = "2"
parking_lot = "0.12.5"
tauri-plugin-single-instance = "2.4.0"
tiny_http = "0.12.0"
chrono = "0.4"

[features]
default = []
cuda = ["whisper-rs/cuda"]
vulkan = ["whisper-rs/vulkan"]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

